--- a/formsExercise.html
+++ b/formsExercise.html
@@ -36,7 +36,7 @@
                 </div>
                 <div>
                     <label for="email">Email:</label>
-                    <input type="text" id="email" name="email" placeholder="Email">
+                    <input type="email" id="email" name="email" placeholder="Email">
                 </div>
                 <fieldset>
                     <legend>How would you rate your level of satisfaction with your visit?</legend>
